--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,10 @@ jobs:
         run: |
           utils/makestats.pl md > statistics.md
 
-      - name: Report on progress
+      - name: Report on progress statistics
         run: |
+          echo '# Progress statistics' >> $GITHUB_STEP_SUMMARY
+          echo >> $GITHUB_STEP_SUMMARY
           cat statistics.md >> $GITHUB_STEP_SUMMARY
 
       - name: Generate plan data
@@ -97,9 +99,31 @@ jobs:
         run: |
           utils/plantogantt.pl mmd
 
+      - name: Generate progress for the phases
+        run: |
+          utils/currenttogantt.pl plan.json statistics.json
+
+      - name: Report on progress of phase 1
+        run: |
+          echo >> $GITHUB_STEP_SUMMARY
+          echo '---' >> $GITHUB_STEP_SUMMARY
+          echo >> $GITHUB_STEP_SUMMARY
+          echo '# Progress of phase 1' >> $GITHUB_STEP_SUMMARY
+          echo >> $GITHUB_STEP_SUMMARY
+          echo '```mermaid' >> $GITHUB_STEP_SUMMARY
+          cat planning/Phase-1.mmd >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo >> $GITHUB_STEP_SUMMARY
+
+      # Note: We should probably write these to a Wiki page
+      - name: Ensure that Current.md hadn't changed
+        run: |
+          utils/updatecurrent.pl plan.json
+          git diff planning/Current.md
+
       - name: Ensure that Stacks.md hadn't changed
         run: |
-          utils/updatestacks.pl
+          utils/updatestacks.pl plan.json
           git diff planning/Stacks.md
 
       - uses: actions/upload-artifact@v4
@@ -108,4 +132,5 @@ jobs:
           name: RISC OS 64 Progress
           path: |
             statistics*
-            plan*
+            plan*.*
+            planning/*.mmd
