Increase timeout for the CI testing of binaries.
CI binary testing should not take very long, but we have a lot of rms
and aifs, so each takes a while to start up. Fortunately, this is now
working quite well, so we can rely on it. 20 minutes should be ok -
yes I'm hitting the build service quite a bit, but that's what it's
there for. I've also filtered the CI test runs so that it only happens
when the changes are made to the rm and aif directories (or the tests)
so that our docs changes don't affect things.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ on:
   push:
     branches: ["master"]
     tags: ["v*"]
+    paths:
+      - rm32/**
+      - rm64/**
+      - aif32/**
+      - aif64/**
+      - tests/**
   # Pull request events happen on pull request state transitions, so we probably don't want this here.
   pull_request:
     branches: ["*"]
@@ -28,7 +34,7 @@ concurrency:
 jobs:
   riscos-test:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
     permissions:
       contents: read
       checks: write
