Update the CI job to not build for the wiki.
The CI job only tests the modules, not the wiki changes. The statistics
are now uploaded as Statistics.md.

--- a/.github/workflows/wikiupdate.yml
+++ b/.github/workflows/wikiupdate.yml
@@ -38,6 +38,7 @@ jobs:
           echo '# Progress statistics' >> $GITHUB_STEP_SUMMARY
           echo >> $GITHUB_STEP_SUMMARY
           cat statistics.md >> $GITHUB_STEP_SUMMARY
+          cp statistics.md wiki-update/Statistics.md
 
       - name: Report on progress of phase 1
         run: |
