--- a/.github/workflows/wikiupdate.yml
+++ b/.github/workflows/wikiupdate.yml
@@ -29,7 +29,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      - name: Build all the docuemnts
+      - name: Build all the documents
         run: |
           make all
 
